--- a/src/app/dat-ghe-bus/dat-ghe-bus.component.scss
+++ b/src/app/dat-ghe-bus/dat-ghe-bus.component.scss
@@ -1,5 +1,7 @@
 .list-ghe {
-    padding: 20px;
-    color: orange;
-    font-size: 20px;
+    .container {
+        margin-top: 10px;
+        color: orange;
+        font-size: 20px;
+    }
 }
